--- a/Porsche_911.ipynb
+++ b/Porsche_911.ipynb
@@ -960,16 +960,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "condition            Used\nmilage              19020\nYear                 2015\nBrand             Porsche\nModel                 911\nModel_Vers        Carrera\nS_RS                 Base\nCabriolet         Hardtop\nColor               Black\nTransmission    Automatic\nName: 1, dtype: object"
-          },
-          "metadata": {},
-          "execution_count": 43
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'X_test' is not defined",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-1-09ff62f14aa5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mModel_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mModel_test\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'X_test' is not defined"
+          ]
         }
       ],
       "source": [
