--- a/Porsche_911.ipynb
+++ b/Porsche_911.ipynb
@@ -9,9 +9,23 @@
       },
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n"
+        "import numpy as np\n",
+        "from sklearn.ensemble import GradientBoostingRegressor\n",
+        "from xgboost import XGBRegressor\n",
+        "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+        "import category_encoders as ce\n",
+        "import numpy as np\n",
+        "from sklearn.feature_selection import f_regression, SelectKBest\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.linear_model import Ridge\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import numpy as np\n",
+        "from scipy.stats import randint, uniform\n",
+        "from sklearn.ensemble import RandomForestRegressor"
       ],
-      "execution_count": 138,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -38741,7 +38755,7 @@
         }
       ],
       "source": [
-        "\n",
+        "pipeline = search.best_estimator_\n",
         "y_pred = pipeline.predict(X_test)\n",
         "mae = mean_absolute_error(Y_test, y_pred)\n",
         "print(f'Test MAE: ${mae:,.0f}')"
