--- a/Presentation Notebook.ipynb
+++ b/Presentation Notebook.ipynb
@@ -12,6 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![alt text](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/2013_Porsche_911_Carrera_4S_%28991%29_%289626546987%29.jpg/1920px-2013_Porsche_911_Carrera_4S_%28991%29_%289626546987%29.jpg)\n",
     "This is a clean version of original notebook it try to keep everything in a neat a presentation ready format.\n",
     "-\n",
     "[Scratch work notebook](https://github.com/popkdodge/Unit-2-Build/blob/master/Porsche_911.ipynb)  \n",
