--- a/Presentation Notebook.ipynb
+++ b/Presentation Notebook.ipynb
@@ -39967,8 +39967,18 @@
    "metadata": {},
    "source": [
     "## ADD IMG BECAUSE PLOTLY WONT AUTOMATICALLY SHOW UP on GITHUB\n",
-    "---"
+    "---\n",
+    "![alt text](https://github.com/popkdodge/Unit-2-Build/blob/master/asset/Manual%20Automatic%20vs%20your.png?raw=true)\n",
+    "![](https://github.com/popkdodge/Unit-2-Build/blob/master/asset/Year%20Price.png?raw=true)\n",
+    "![](https://github.com/popkdodge/Unit-2-Build/blob/master/asset/Price%20Distribrution.png?raw=true)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
