--- a/Presentation Notebook.ipynb
+++ b/Presentation Notebook.ipynb
@@ -19,7 +19,7 @@
     "[Unclean Dataset (post webscrapped)](https://github.com/popkdodge/Unit-2-Build/tree/master/Porsche_Datasets)  \n",
     "[Webs-scrapper Code](https://github.com/popkdodge/Unit-2-Build/blob/master/WebScrapping1.py)  \n",
     "[Plotly Dash Code](https://github.com/popkdodge/dash-template)  \n",
-    "[Medium Post](https://github.com/popkdodge/Unit-2-Build/blob/master/Porsche_911.ipynb)  \n",
+    "[Medium Post](https://medium.com/@popkdodge/porsche-911-carrera-af795a871acc)  \n",
     "[Website Heroku](https://porsche911.herokuapp.com/)  \n",
     "[Data Cleaning note](https://github.com/popkdodge/Unit-2-Build/blob/master/Porsche_cleaning.ipynb)\n",
     "\n"
